recursion.lessons.recursion.spiral.SpiralUse.scala.error
SpiralUse:3: error: not found: value pi
    spiral(pi,pi,1,2);
           ^