recursion.lessons.recursion.spiral.SpiralUse.scala.code
override def run() {
    spiral(pi,pi,1,2);
}
